--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -27,8 +27,8 @@
     /* align-items: center; */
     width: 70%;
     flex-wrap: wrap;
-    margin: 10px auto;
-    margin-bottom: 50px;
+    margin: 50px auto;
+    margin-bottom: 100px;
 }
 
 .projectImg {
@@ -38,7 +38,6 @@
 .projectImg > img {
     width: 100%;
     height: 100%;
-    filter: contrast(0.8);
     border-radius: 5px;
     transition-duration: 500ms;
 }
